# tui-2048

./: Cargo.toml  README.md
src/: app.rs  colors.rs  interface.rs  main.rs  movement.rs  util.rs
