[package]
name = "tui-2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["serde"] }
ratatui = { version = "0.26.0", features = ["serde"] }
itertools = "0.12.0"
unicode-width = "0.1.11"
palette = "0.7.3"
rand = "0.8.5"
lazy_static = "1.4.0"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }

# TODO: only use needed features
config = "0.14.0"
regex = "1.10.3"